sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var compteur = 2
  do {
    c=0
    for (i <- 0 to getNombreValeurs()-compteur ){
      if (plusPetit(i+1, i)){
        echange(i, i+1)         
      }
    }
    compteur += 1
  } while (compteur!=getNombreValeurs)
}
